--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
       var rightPressed = false;
       var leftPressed = false;
 
-      document.addEventListener('keydown', keyDownHandler, false);
-      document.addEventListener('keyup', keyUpHandler, false);
+      document.addEventListener("keydown", keyDownHandler, false);
+      document.addEventListener("keyup", keyUpHandler, false);
 
       function keyDownHandler(e) {
-        if (e.key == 'Right' || e.key == "ArrowRight") {
+        if (e.key == "Right" || e.key == "ArrowRight") {
           rightPressed = true;
-        }
-        else if (e.key == "Left" || e.key == "ArrowLeft") {
+        } else if (e.key == "Left" || e.key == "ArrowLeft") {
           leftPressed = true;
         }
       }
@@ -52,12 +51,10 @@
       function keyUpHandler(e) {
         if (e.key == "Right" || e.key == "ArrowRight") {
           rightPressed = false;
-        }
-        else if (e.key == "Left" || e.key == "ArrowLeft") {
+        } else if (e.key == "Left" || e.key == "ArrowLeft") {
           leftPressed = false;
         }
       }
-
       function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -67,7 +64,12 @@
 
       function drawPaddle() {
         ctx.beginPath();
-        ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+        ctx.rect(
+          paddleX,
+          canvas.height - paddleHeight,
+          paddleWidth,
+          paddleHeight
+        );
         ctx.fillStyle = "#2824KG";
         ctx.fill();
         ctx.closePath();
@@ -78,10 +80,17 @@
         drawBall();
         drawPaddle();
 
-        if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+        if (y + dy < ballRadius) {
           dy = -dy;
+        } else if (y + dy > canvas.height - ballRadius) {
+          if (x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+          } else {
+            alert("GAME OVER");
+            document.location.reload();
+            clearInterval(interval);
+          }
         }
-
         if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
           dx = -dx;
         }
@@ -94,8 +103,7 @@
           if (paddleX + paddleWidth > canvas.width) {
             paddleX = canvas.width - paddleWidth;
           }
-        }
-        else if (leftPressed) {
+        }else if (leftPressed) {
           paddleX -= 7;
           if (paddleX < 0) {
             paddleX = 0;
@@ -106,7 +114,7 @@
         y += dy;
       }
       
-      setInterval(draw, 10);
+      var interval = setInterval(draw, 10);
 
       // ctx.beginPath();
       // ctx.rect(20, 40, 50, 50);
