--- a/index.html
+++ b/index.html
@@ -105,12 +105,22 @@
               ) {
                 dy = -dy;
                 b.status = 0;
+                score++;
+                if (score == brickColumnCount * brickRowCount) {
+                  alert("CONGRATULATIONS, YOU WIN");
+                  document.location.reload();
+                  clearInterval(interval);
+                }
               }
             }
           }
         }
       }
-
+      function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Score: " + score, 8, 20);
+      }
       function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -137,6 +147,7 @@
         drawBall();
         collisionDetection();
         drawPaddle();
+        drawScore();
 
         if (y + dy < ballRadius) {
           dy = -dy;
