--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       var dy = -2;
 
       var score = 0;
-
+      var lives = 3;
       var ballRadius = 10;
 
       var paddleHeight = 10;
@@ -128,6 +128,13 @@
         ctx.fillStyle = "#0095DD";
         ctx.fillText("Score: " + score, 8, 20);
       }
+
+      function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Lives: " + lives, canvas.width - 65, 20);
+      }
+
       function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
@@ -155,6 +162,7 @@
         collisionDetection();
         drawPaddle();
         drawScore();
+        drawLives();
 
         if (y + dy < ballRadius) {
           dy = -dy;
@@ -162,9 +170,17 @@
           if (x > paddleX && x < paddleX + paddleWidth) {
             dy = -dy;
           } else {
-            alert("GAME OVER");
-            document.location.reload();
-            clearInterval(interval);
+            lives--;
+            if (!lives) {
+              alert("GAME OVER");
+              document.location.reload();
+            } else {
+              x = canvas.width / 2;
+              y = canvas.height - 30;
+              dx = 3;
+              dy = -3;
+              paddleX = (canvas.width - paddleWidth) / 2;
+            }
           }
         }
         if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
@@ -188,9 +204,10 @@
 
         x += dx;
         y += dy;
+        requestAnimationForm(draw);
       }
       
-      var interval = setInterval(draw, 10);
+      draw()
 
       // ctx.beginPath();
       // ctx.rect(20, 40, 50, 50);
